--- a/force-app/main/default/lwc/first/first.html
+++ b/force-app/main/default/lwc/first/first.html
@@ -1,8 +1,8 @@
 <template>
     <lightning-card title="Component A" icon-name="custom:custom63">
         <div class="slds-p-around_medium">
-            <lightning-input label="Enter Message" value={inputValue} onchange={handleInputChange}></lightning-input>
-            <lightning-button label="Send Message" onclick={handleSendMessage}></lightning-button>
+            <lightning-input label="Enter Message for B" value={inputValue} onchange={handleInputChange}></lightning-input>
+            <lightning-button label="Send Message to B" onclick={handleSendMessage}></lightning-button>
         </div>
         <div class="slds-p-around_medium">
             <p>Message from Component B: {messageFromB}</p>
