--- a/force-app/main/default/lwc/second/second.html
+++ b/force-app/main/default/lwc/second/second.html
@@ -1,11 +1,11 @@
 <template>
     <lightning-card title="Component B" icon-name="custom:custom63">
         <div class="slds-p-around_medium">
-            <p>Message from Component A: {messageFromA}</p>
+            <lightning-input label="Enter Message for A" value={inputValue} onchange={handleInputChange}></lightning-input>
+            <lightning-button label="Send Message to A" onclick={handleSendMessage}></lightning-button>
         </div>
         <div class="slds-p-around_medium">
-            <lightning-input label="Enter Message" value={inputValue} onchange={handleInputChange}></lightning-input>
-            <lightning-button label="Send Message" onclick={handleSendMessage}></lightning-button>
+            <p>Message from Component A: {messageFromA}</p>
         </div>
     </lightning-card>
 </template>
